--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "TrabalhoC.C": "cpp",
         "algoritmos.C": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
